Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0 Alpha, 5.5.0
-
None
-
WinRT
-
-
d04eb32908cfa7c6692bacfc292494b85ce3cd8a
Description
Creating a default project in Creator using 5.5 results in this output:
qt.winrtrunner.app: Failed to load Style for ApplicationWindow_QMLTYPE_40(0x71eba50)
qt.winrtrunner.app: Failed to load Style for ApplicationWindow_QMLTYPE_40(0x71eba50)
qt.winrtrunner.app: qrc:/QtQuick/Controls/Button.qml:96: TypeError: Cannot read property of null
qt.winrtrunner.app: qrc:/QtQuick/Controls/Button.qml:96: TypeError: Cannot read property of null
qt.winrtrunner: App exited with code 1
There seems to be multiple issues. First if a style is not loaded then my guess that controls should still display something.
Secondly there is the Style Addition in 5.5 for WinRT/Phone inside subdirectories. Probably the installation path or such is the reason for not being packaged correctly. Furthermore the style is not done yet at all, maybe we should remove the commit for 5.5?