WinRT: fix style loading from plugin/library

qt_quick_controls_style_path doesn't store the complete path to
the style dir on WinRT. Since f0c227f8a9a5c5e3ed83f86702626092457175aa,
m_name (="WinRT") is not appended anymore. Also, m_path is not
set when loading style from a plugin/library.

Task-number: QTBUG-44880
Change-Id: I4e5c6503984e70cb9ad74e57e0f1c5a63211f510
Reviewed-by: Andrew Knight <qt@panimo.net>
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@theqtcompany.com>